--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,11 @@ set(CMAKE_AUTOMOC ON)
 # Find the QtWidgets library
 find_package(Qt5Widgets)
 
-# Tell CMake to create the helloworld executable
-add_executable(helloworld main.cpp plugin.cpp)
-
+add_library(plugin SHARED plugin.cpp)
 # Use the Widgets module from Qt 5.
-target_link_libraries(helloworld Qt5::Widgets)
+target_link_libraries(plugin Qt5::Widgets)
+
+# Tell CMake to create the helloworld executable
+add_executable(helloworld main.cpp)
+# Link the "plugin" (now a shared library)
+target_link_libraries(helloworld plugin)
