--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
-# libqt5-qtdoc.rpm
-# file:///usr/share/doc/packages/qt5/qtdoc/cmake-manual.html
-cmake_minimum_required(VERSION 2.8.11)
+# https://qt-project.org/quarterly/view/using_cmake_to_build_qt_projects
+cmake_minimum_required(VERSION 2.6.0)
 
 project(testproject)
 
@@ -10,10 +9,13 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
 # Find the QtWidgets library
-find_package(Qt5Widgets)
+find_package(Qt4 REQUIRED)
+
+include(${QT_USE_FILE})
+add_definitions(${QT_DEFINITIONS})
 
 # Tell CMake to create the helloworld executable
 add_executable(helloworld main.cpp)
 
 # Use the Widgets module from Qt 5.
-target_link_libraries(helloworld Qt5::Widgets)
+target_link_libraries(helloworld QtCore QtGui)
